// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`country helpers getConfigByISOName country configs Australia 1`] = `
{
  "alpha2Code": "AU",
  "code": 36,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": true,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Bangladesh 1`] = `
{
  "alpha2Code": "BD",
  "code": 50,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Division",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "bangla",
  },
  "prayerSettings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Brazil 1`] = `
{
  "alpha2Code": "BR",
  "code": 76,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Canada 1`] = `
{
  "alpha2Code": "CA",
  "code": 124,
  "features": {
    "education": false,
    "events": true,
    "iqamahTimes": true,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Egypt 1`] = `
{
  "alpha2Code": "EG",
  "code": 818,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Governorate",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "Egypt",
  },
}
`;

exports[`country helpers getConfigByISOName country configs France 1`] = `
{
  "alpha2Code": "FR",
  "code": 250,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "union-des-organisations-islamiques-de-france",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Germany 1`] = `
{
  "alpha2Code": "DE",
  "code": 276,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "german",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs India 1`] = `
{
  "alpha2Code": "IN",
  "code": 356,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "hindi",
  },
  "prayerSettings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Ireland 1`] = `
{
  "alpha2Code": "IE",
  "code": 372,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Italy 1`] = `
{
  "alpha2Code": "IT",
  "code": 380,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Malaysia 1`] = `
{
  "alpha2Code": "MY",
  "code": 458,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Mexico 1`] = `
{
  "alpha2Code": "MX",
  "code": 484,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Netherlands 1`] = `
{
  "alpha2Code": "NL",
  "code": 528,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs New Zealand 1`] = `
{
  "alpha2Code": "NZ",
  "code": 554,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": true,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Nigeria 1`] = `
{
  "alpha2Code": "NG",
  "code": 566,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Pakistan 1`] = `
{
  "alpha2Code": "PK",
  "code": 586,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "urdu",
  },
  "prayerSettings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Russia 1`] = `
{
  "alpha2Code": "RU",
  "code": 643,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "russian",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "russia",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Saudi Arabia 1`] = `
{
  "alpha2Code": "SA",
  "code": 682,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "Makkah",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Sudan 1`] = `
{
  "alpha2Code": "SD",
  "code": 729,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Switzerland 1`] = `
{
  "alpha2Code": "CH",
  "code": 756,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Turkey 1`] = `
{
  "alpha2Code": "TR",
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Turkiye 1`] = `
{
  "alpha2Code": "TR",
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs United Arab Emirates 1`] = `
{
  "alpha2Code": undefined,
  "code": 784,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "gaiae",
  },
}
`;

exports[`country helpers getConfigByISOName country configs United Kingdom 1`] = `
{
  "alpha2Code": "GB",
  "code": 826,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": true,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "mi",
    "labelForProvince": "Province",
    "postalCodeName": "Post Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs United States 1`] = `
{
  "alpha2Code": "US",
  "code": 840,
  "features": {
    "education": true,
    "events": true,
    "iqamahTimes": true,
    "mosques": true,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "mi",
    "labelForProvince": "State",
    "postalCodeName": "ZIP Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName country configs Venezuela 1`] = `
{
  "alpha2Code": "VE",
  "code": 862,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "State",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName returns default config if country not found 1`] = `
{
  "alpha2Code": undefined,
  "code": null,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "intl": {
    "distanceUnit": "km",
    "labelForProvince": "Province",
    "postalCodeName": "Postal Code",
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayerSettings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getCountryAlpha2CodesByFeature returns correct countries for education feature 1`] = `
[
  "US",
]
`;

exports[`country helpers getCountryAlpha2CodesByFeature returns correct countries for events feature 1`] = `
[
  "US",
  "CA",
]
`;

exports[`country helpers getCountryAlpha2CodesByFeature returns correct countries for iqamah feature 1`] = `
[
  "US",
  "CA",
  "GB",
  "AU",
  "NZ",
]
`;

exports[`country helpers getCountryAlpha2CodesByFeature returns correct countries for mosque feature 1`] = `
[
  "US",
  "CA",
  "BD",
  "TR",
  "TR",
  "GB",
  "AU",
  "NZ",
  "FR",
  "RU",
  "DE",
  "IE",
  "IT",
  "NL",
  "CH",
]
`;

exports[`country helpers getCountryByAlpha2Name returns country info if found 1`] = `
{
  "emoji": "🇺🇸",
  "gmap_name": "United States",
  "iso_name": "United States",
  "pc_name": "United States",
}
`;

exports[`country helpers getCountryByAlpha2Name returns country info if found 2`] = `
{
  "emoji": "🇨🇦",
  "gmap_name": "Canada",
  "iso_name": "Canada",
  "pc_name": "Canada",
}
`;

exports[`country helpers getCountryByISOName returns country info if found 1`] = `
{
  "emoji": "🇺🇸",
  "gmap_name": "United States",
  "iso_name": "United States",
  "pc_name": "United States",
}
`;

exports[`country helpers getCountryByISOName returns country info if found 2`] = `
{
  "emoji": "🇸🇦",
  "gmap_name": "Saudi Arabia",
  "iso_name": "Saudi Arabia",
  "pc_name": "Saudi Arabia",
}
`;

exports[`country helpers getCountryByName returns country info by shortname 1`] = `
{
  "emoji": "🇷🇺",
  "gmap_name": "Russian Federation",
  "iso_name": "Russian Federation",
  "pc_name": "Russia",
}
`;

exports[`country helpers getCountryByName returns country info by shortname 2`] = `
{
  "emoji": "🇵🇸",
  "gmap_name": "Palestinian Territory, Occupied",
  "iso_name": "Palestinian Territory, Occupied",
  "pc_name": "Palestinian Territory, Occupied",
}
`;
